force-app/main/default/objects/Boat_Weekends__c/Boat_Weekends__c.object-meta.xml
<CustomObject>
    <label>Boat Weekend</label>
    <nameField>
        <label>Boat Weekends Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boat Weekends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>