force-app/main/default/objects/Boat_Weekends__c/fields/Is_Friday__c.field-meta.xml
<CustomField>
    <fullName>Is_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Friday</label>
    <type>Checkbox</type>
</CustomField>