force-app/main/default/objects/Boat_Weekends__c/fields/Is_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Is_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sunday</label>
    <type>Checkbox</type>
</CustomField>