force-app/main/default/objects/Boat_Weekends__c/fields/Is_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Is_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tuesday</label>
    <type>Checkbox</type>
</CustomField>