force-app/main/default/objects/Boat_Weekends__c/fields/Is_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Is_Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Wednesday</label>
    <type>Checkbox</type>
</CustomField>